     practically uncertain if that code matches the developer's intention),
     and (better safe than sorry) added `NULL`-return checks although we should
     not normally get into those code paths with the `x*()` methods which
     should bail out and abort the program with a common error message when
     an allocation fails. [#3293]

 - NUT for Windows specific updates:
   * Revised detection of (relative) paths to program and configuration files
     near the currently running program in NUT for Windows builds, including
     limited support for UNC paths (ignoring a localhost `\\?\` prefix).
     [issues #3207, #3063, #3065, #3219]
   * Augmented WIN32 `nut.exe` launcher with `status` and `restart` actions,
     and general ability to debug-log the activities during service management
     operations. (Re-)registration of the "Network UPS Tools" service should
     now populate a nice description of it. The `-U` (uninstall) action should
     now also try to stop the service first. [PR #3235]
   * Revised WIN32 `WSAStartup()` and registration of `atexit(WSACleanup)` to
     only be done once per program (and cleanups to be always registered); this
     impacts the C `libupsclient` and C++ `libnutclient` libraries (and so most
     NUT clients and tools which use the former, and `nutconf` which uses the
     latter), the `apcupsd` driver, `upsd` data server, and `nut-scanner` tool.
     [PR #3237]
   * Documented setup of Microsoft IIS to host the NUT CGI programs. [#3207]

 - `asem`, `bestfortress`, `bestuferrups`, `bicker_ser`, `everups`, `metasys`,
   `masterguard`, `mge-utalk`, `oneac`, `phoenixcontact_modbus`, `pijuice`,
   `powercom`, `powervar_cx_ser`, `usbhid-ups`, `victronups` driver updates:
   * Moved code to align with NUT driver architecture, so `upsdrv_initups()`
     would focus on preparing communications, and `upsdrv_initinfo()` would
     actually talk to the device and set initial critical data values. [#1962]
